[gd_scene load_steps=8 format=3 uid="uid://cutlcf1vup3tv"]

[ext_resource type="Script" path="res://scripts/car/car3dai.gd" id="1_t55vi"]
[ext_resource type="FontFile" uid="uid://nt1c31klb8dr" path="res://UpheavalPro.ttf" id="2_y0sqd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d00i6"]
albedo_color = Color(0.235294, 0.231373, 0.211765, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_xywvb"]
material = SubResource("StandardMaterial3D_d00i6")
top_radius = 0.4
bottom_radius = 0.4
height = 0.5
radial_segments = 16

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7sfnv"]
albedo_color = Color(0.67451, 0.192157, 0.239216, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ankmt"]
material = SubResource("StandardMaterial3D_7sfnv")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_82ypk"]
radius = 0.917279
height = 4.20923

[node name="carAI" type="VehicleBody3D" groups=["ai_driver", "driver"]]
mass = 75.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.2, 0)
script = ExtResource("1_t55vi")

[node name="front_left_wheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.712939, -0.201364, 1.84554)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.4
suspension_travel = 10.0
suspension_stiffness = 100.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="front_left_wheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_xywvb")

[node name="front_right_wheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.713, -0.201566, 1.8458)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.4
suspension_travel = 10.0
suspension_stiffness = 100.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="front_right_wheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_xywvb")

[node name="back_left_wheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.712939, -0.228535, -2.24521)
use_as_traction = true
wheel_radius = 0.4
suspension_travel = 10.0
suspension_stiffness = 100.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="back_left_wheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_xywvb")

[node name="back_right_wheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.713, -0.228737, -2.24521)
use_as_traction = true
wheel_radius = 0.4
suspension_travel = 10.0
suspension_stiffness = 100.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="back_right_wheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_xywvb")

[node name="body" type="MeshInstance3D" parent="."]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_ankmt")

[node name="collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.547709, 0)
shape = SubResource("CapsuleShape3D_82ypk")

[node name="marker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="forward_raycast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 5)
debug_shape_custom_color = Color(0.756863, 0.0823529, 0.439216, 1)
debug_shape_thickness = 5

[node name="side_raycast" type="RayCast3D" parent="."]
target_position = Vector3(5, 0, 0)
debug_shape_custom_color = Color(0.858824, 0.415686, 0, 1)
debug_shape_thickness = 5

[node name="name" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.29862, 0)
billboard = 1
double_sided = false
text = "fuczek"
font = ExtResource("2_y0sqd")
font_size = 150

[node name="steering_label" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.08005, 0)
visible = false
billboard = 1
double_sided = false
text = "0.0"
font_size = 150

[node name="lap_completed" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.34409, 0)
visible = false
billboard = 1
double_sided = false
text = "lap 1"
font_size = 150

[node name="information_label" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.22907, 0)
billboard = 1
double_sided = false
font_size = 150

[node name="modifiers" type="Node3D" parent="."]

[node name="model" type="MeshInstance3D" parent="."]
